# iptv-speed-test

./: .gitignore  1-download-filter.sh  2-speed-check.sh  3-sort-by-host.sh  Cargo.toml  README.md  docker-compose.yml  download-filter.sh  script.sh  subscribe.txt
.cargo/: config.toml
examples/: batch_test.sh  test_m3u8.m3u8  test_urls.txt
src/: m3u8_parser.rs  main.rs  speed_test.rs
